--- a/src/styles.css
+++ b/src/styles.css
@@ -107,16 +107,23 @@
 }
 
 /*
-! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
+
+/ tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
+
 */
 
 /*
+
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
+
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
+
 */
 
 *,
+
 ::before,
+
 ::after {
   box-sizing: border-box;
   /* 1 */
@@ -129,21 +136,31 @@
 }
 
 ::before,
+
 ::after {
   --tw-content: '';
 }
 
 /*
+
 1. Use a consistent sensible line-height in all browsers.
+
 2. Prevent adjustments of font size after orientation changes in iOS.
+
 3. Use a more readable tab size.
+
 4. Use the user's configured `sans` font-family by default.
+
 5. Use the user's configured `sans` font-feature-settings by default.
+
 6. Use the user's configured `sans` font-variation-settings by default.
+
 7. Disable tap highlights on iOS
+
 */
 
 html,
+
 :host {
   line-height: 1.5;
   /* 1 */
@@ -165,8 +182,11 @@ html,
 }
 
 /*
+
 1. Remove the margin in all browsers.
+
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+
 */
 
 body {
@@ -177,9 +197,13 @@ body {
 }
 
 /*
+
 1. Add the correct height in Firefox.
+
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+
 3. Ensure horizontal rules are visible by default.
+
 */
 
 hr {
@@ -192,7 +216,9 @@ hr {
 }
 
 /*
+
 Add the correct text decoration in Chrome, Edge, and Safari.
+
 */
 
 abbr:where([title]) {
@@ -201,21 +227,30 @@ abbr:where([title]) {
 }
 
 /*
+
 Remove the default font size and weight for headings.
+
 */
 
 h1,
+
 h2,
+
 h3,
+
 h4,
+
 h5,
+
 h6 {
   font-size: inherit;
   font-weight: inherit;
 }
 
 /*
+
 Reset links to optimize for opt-in styling instead of opt-out.
+
 */
 
 a {
@@ -224,24 +259,35 @@ a {
 }
 
 /*
+
 Add the correct font weight in Edge and Safari.
+
 */
 
 b,
+
 strong {
   font-weight: bolder;
 }
 
 /*
+
 1. Use the user's configured `mono` font-family by default.
+
 2. Use the user's configured `mono` font-feature-settings by default.
+
 3. Use the user's configured `mono` font-variation-settings by default.
+
 4. Correct the odd `em` font sizing in all browsers.
+
 */
 
 code,
+
 kbd,
+
 samp,
+
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
@@ -254,7 +300,9 @@ pre {
 }
 
 /*
+
 Add the correct font size in all browsers.
+
 */
 
 small {
@@ -262,10 +310,13 @@ small {
 }
 
 /*
+
 Prevent `sub` and `sup` elements from affecting the line height in all browsers.
+
 */
 
 sub,
+
 sup {
   font-size: 75%;
   line-height: 0;
@@ -282,9 +333,13 @@ sup {
 }
 
 /*
+
 1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+
 2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+
 3. Remove gaps between table borders by default.
+
 */
 
 table {
@@ -297,15 +352,23 @@ table {
 }
 
 /*
+
 1. Change the font styles in all browsers.
+
 2. Remove the margin in Firefox and Safari.
+
 3. Remove default padding in all browsers.
+
 */
 
 button,
+
 input,
+
 optgroup,
+
 select,
+
 textarea {
   font-family: inherit;
   /* 1 */
@@ -330,22 +393,31 @@ textarea {
 }
 
 /*
+
 Remove the inheritance of text transform in Edge and Firefox.
+
 */
 
 button,
+
 select {
   text-transform: none;
 }
 
 /*
+
 1. Correct the inability to style clickable types in iOS and Safari.
+
 2. Remove default button styles.
+
 */
 
 button,
+
 input:where([type='button']),
+
 input:where([type='reset']),
+
 input:where([type='submit']) {
   -webkit-appearance: button;
   /* 1 */
@@ -356,7 +428,9 @@ input:where([type='submit']) {
 }
 
 /*
+
 Use the modern Firefox focus style for all focusable elements.
+
 */
 
 :-moz-focusring {
@@ -364,7 +438,9 @@ Use the modern Firefox focus style for all focusable elements.
 }
 
 /*
+
 Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
+
 */
 
 :-moz-ui-invalid {
@@ -372,7 +448,9 @@ Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/
 }
 
 /*
+
 Add the correct vertical alignment in Chrome and Firefox.
+
 */
 
 progress {
@@ -380,17 +458,23 @@ progress {
 }
 
 /*
+
 Correct the cursor style of increment and decrement buttons in Safari.
+
 */
 
 ::-webkit-inner-spin-button,
+
 ::-webkit-outer-spin-button {
   height: auto;
 }
 
 /*
+
 1. Correct the odd appearance in Chrome and Safari.
+
 2. Correct the outline style in Safari.
+
 */
 
 [type='search'] {
@@ -401,7 +485,9 @@ Correct the cursor style of increment and decrement buttons in Safari.
 }
 
 /*
+
 Remove the inner padding in Chrome and Safari on macOS.
+
 */
 
 ::-webkit-search-decoration {
@@ -409,8 +495,11 @@ Remove the inner padding in Chrome and Safari on macOS.
 }
 
 /*
+
 1. Correct the inability to style clickable types in iOS and Safari.
+
 2. Change font properties to `inherit` in Safari.
+
 */
 
 ::-webkit-file-upload-button {
@@ -421,7 +510,9 @@ Remove the inner padding in Chrome and Safari on macOS.
 }
 
 /*
+
 Add the correct display in Chrome and Safari.
+
 */
 
 summary {
@@ -429,21 +520,35 @@ summary {
 }
 
 /*
+
 Removes the default spacing and border for appropriate elements.
+
 */
 
 blockquote,
+
 dl,
+
 dd,
+
 h1,
+
 h2,
+
 h3,
+
 h4,
+
 h5,
+
 h6,
+
 hr,
+
 figure,
+
 p,
+
 pre {
   margin: 0;
 }
@@ -458,7 +563,9 @@ legend {
 }
 
 ol,
+
 ul,
+
 menu {
   list-style: none;
   margin: 0;
@@ -466,7 +573,9 @@ menu {
 }
 
 /*
+
 Reset default styling for dialogs.
+
 */
 
 dialog {
@@ -474,7 +583,9 @@ dialog {
 }
 
 /*
+
 Prevent resizing textareas horizontally by default.
+
 */
 
 textarea {
@@ -482,8 +593,11 @@ textarea {
 }
 
 /*
+
 1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
+
 2. Set the default placeholder color to the user's configured gray 400 color.
+
 */
 
 input::-moz-placeholder, textarea::-moz-placeholder {
@@ -494,6 +608,7 @@ input::-moz-placeholder, textarea::-moz-placeholder {
 }
 
 input::placeholder,
+
 textarea::placeholder {
   opacity: 1;
   /* 1 */
@@ -502,16 +617,21 @@ textarea::placeholder {
 }
 
 /*
+
 Set the default cursor for buttons.
+
 */
 
 button,
+
 [role="button"] {
   cursor: pointer;
 }
 
 /*
+
 Make sure disabled buttons don't get the pointer cursor.
+
 */
 
 :disabled {
@@ -519,18 +639,29 @@ Make sure disabled buttons don't get the pointer cursor.
 }
 
 /*
+
 1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
+
 2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
+
    This can trigger a poorly considered lint error in some tools but is included by design.
+
 */
 
 img,
+
 svg,
+
 video,
+
 canvas,
+
 audio,
+
 iframe,
+
 embed,
+
 object {
   display: block;
   /* 1 */
@@ -539,10 +670,13 @@ object {
 }
 
 /*
+
 Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
+
 */
 
 img,
+
 video {
   max-width: 100%;
   height: auto;
