--- a/src/app/ingredient/ingredient-details/ingredient-details.component.html
+++ b/src/app/ingredient/ingredient-details/ingredient-details.component.html
@@ -1,3 +1,61 @@
 @if(ingredientDetails$|async ;as details){
-<p>{{details.carbohydrates}}</p>
+  <div class="w-full max-w-md mx-auto mt-6 border rounded-lg shadow-md overflow-hidden">
+    <table class="min-w-full table-auto text-left border-collapse">
+      <thead class="bg-gray-100">
+      <tr>
+        <th class="px-4 py-2 text-sm font-semibold text-gray-700">Macronutriments</th>
+        <th class="px-4 py-2 text-sm font-semibold text-gray-700"></th>
+      </tr>
+      </thead>
+      <tbody class="bg-white divide-y divide-gray-200">
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Energy</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.energy}} kcal /{{details.energy *4.184}} kJ</td>
+      </tr>
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Protein</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.protein}} g</td>
+      </tr>
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Carbohydrates</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.carbohydrates}} g</td>
+      </tr>
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Sugar in carbohydrates</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.carbohydrates_sugar}} g</td>
+      </tr>
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Fat</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.fat}} g</td>
+      </tr>
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Saturated fatty acid content in fatty acids</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.fat_saturated}} g</td>
+      </tr>
+      </tbody>
+
+      <thead class="bg-gray-100">
+      <tr>
+        <th class="px-4 py-2 text-sm font-semibold text-gray-700">Other</th>
+        <th class="px-4 py-2 text-sm font-semibold text-gray-700"></th>
+      </tr>
+      <tbody class="bg-white divide-y divide-gray-200">
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Fiber</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.fiber}} g</td>
+      </tr>
+      <tr>
+        <td class="px-4 py-2 text-sm text-gray-600">Sodium</td>
+        <td class="px-4 py-2 text-sm text-gray-800">{{details.sodium}} g</td>
+      </tr>
+      </tbody>
+
+    </table>
+  </div>
 }
+
+
+
+
+
+
