feature: add ingredient name to detail card+ improve layout

--- a/src/app/ingredient/ingredient.component.html
+++ b/src/app/ingredient/ingredient.component.html
@@ -1,6 +1,6 @@
-<h1>Ingredients</h1>
+<h1 class="text-2xl font-medium">Ingredients</h1>
 <hr>
-<div class="flex flex-row">
+<div class="flex flex-row pt-8" >
   <div class="basis-1/2">
     <app-ingredient-list [ingredients]="ingredients$|async"></app-ingredient-list>
   </div>
