feature: add and style paginator component link paginator to ingredient list

--- a/src/app/ingredient/ingredient-list/ingredient-list.component.html
+++ b/src/app/ingredient/ingredient-list/ingredient-list.component.html
@@ -1,5 +1,8 @@
 <ul role="list" class="basis-1/2 divide-y divide-gray-100">
-  @for (ingredient of (ingredients);track ingredient){
+  @for(ingredient of (ingredients ?? []);track ingredient){
+    <li>
     <app-ingredient-item [ingredient]="ingredient"></app-ingredient-item>
+    </li>
   }
+  <app-paginator [visiblePages]="visiblePages()" [totalPages]="totalPages"></app-paginator>
 </ul>
