--- a/src/app/ingredient/ingredient.component.html
+++ b/src/app/ingredient/ingredient.component.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="flex flex-row pt-8" >
   <div class="basis-1/2">
-    <app-ingredient-list [ingredients]="ingredients$|async"></app-ingredient-list>
+    <app-ingredient-list [totalPages]="total()" [ingredients]="ingredients$|async" (pageChange)="onPageChange($event)"></app-ingredient-list>
   </div>
   <div class="basis-1/2">
     <router-outlet></router-outlet>
