--- a/src/app/body-viewer/body-viewer.component.html
+++ b/src/app/body-viewer/body-viewer.component.html
@@ -1,8 +1,8 @@
 <div class="canvas-container">
   <canvas #canvas3d></canvas>
   @if (hoveredPartName) {
-    <div class="hover-label" [style.top.px]="tooltipPosition.y"
-         [style.left.px]="tooltipPosition.x">{{ hoveredPartName }}
-    </div>
+    <app-muscle-tooltip class="hover-label" [style.top.px]="tooltipPosition.y"
+         [style.left.px]="tooltipPosition.x" [muscle]="hoveredPartName">
+    </app-muscle-tooltip>
   }
 </div>
