--- a/src/app/muscle-tooltip/muscle-tooltip.component.html
+++ b/src/app/muscle-tooltip/muscle-tooltip.component.html
@@ -1,4 +1,6 @@
-<div class="tooltip">
-  <p>{{ muscle?.name }}</p>
-  <p>{{ muscle?.name_en }}</p>
+<div class="rounded-lg shadow-lg ring-1 ring-black/10 px-4 py-2.5 text-white bg-black/80 backdrop-blur-sm
+            transform transition-all duration-200 hover:bg-black/90
+            max-w-xs break-words">
+  <p class="font-medium mb-0.5">{{ muscle?.name }}</p>
+  <p class="text-sm text-gray-300">{{ muscle?.name_en }}</p>
 </div>
