--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<div class="container mx-auto ">
-<router-outlet></router-outlet>
-</div>
+@if (isLoading) {
+  <div class="loading">
+    <mat-progress-bar mode="indeterminate" color="warn" class=""></mat-progress-bar>
+  </div>
+} @else {
+  <div class="container mx-auto ">
+    <router-outlet></router-outlet>
+  </div>
+
+}
