--- a/src/app/ingredient/ingredient.component.html
+++ b/src/app/ingredient/ingredient.component.html
@@ -1,8 +1,17 @@
 <h1 class="text-2xl font-medium">Ingredients</h1>
 <hr>
 <div class="flex flex-row pt-8" >
-  <div class="basis-1/2">
-    <app-ingredient-list [totalPages]="total()" [ingredients]="ingredients$|async" (pageChange)="onPageChange($event)"></app-ingredient-list>
+  <div class="basis-1/2 flex-col items-center">
+    @if (isLoading()){
+      <div class="w-1/2 flex justify-center">
+        <img src="assets/spinner.gif" class="w-24 h-24">
+      </div>
+    }
+    <app-ingredient-list
+      [totalPages]="total()"
+      [ingredients]="ingredients$ | async"
+      (pageChange)="onPageChange($event)">
+    </app-ingredient-list>
   </div>
   <div class="basis-1/2">
     <router-outlet></router-outlet>
