--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html, body { height: 100%; }
