--- a/src/app/ingredient/ingredient-details/ingredient-details.component.html
+++ b/src/app/ingredient/ingredient-details/ingredient-details.component.html
@@ -1,10 +1,10 @@
 <div class="flex flex-col items-center">
-@if (isLoading$|async;as isLoading){
+@if (isLoading()){
   <div class="">
     <img src="assets/spinner.gif" class="w-24 h-24">
   </div>
 }
-@if(!(isLoading$ | async)&&(ingredientDetails$|async);as details){
+@if(!(isLoading())&&(ingredientDetails$|async);as details){
   <div class="flex flex-col items-center max-w-md text-center" >
     <div>
       <h2>{{details.name}}</h2>
