--- a/src/app/exercise-page/exercise-card/exercise-card.component.html
+++ b/src/app/exercise-page/exercise-card/exercise-card.component.html
@@ -1,1 +1,23 @@
-<p>exercise-card works!</p>
+<div class="card-container">
+    <div class="card">
+      <!-- Front Side -->
+      <div class="card-side card-front">
+        <h3 class="card-title">{{ exercise.name }}</h3>
+        <p class="card-equipment">Equipment: {{ exercise.equipment }}</p>
+        <div class="card-muscles">
+          <p class="muscles-title">Muscles:</p>
+          <ul>
+            @for (muscle of exercise.muscles; track muscle.name ){
+            <li>{{ muscle }}</li>
+            }
+          </ul>
+        </div>
+      </div>
+  
+      <!-- Back Side -->
+      <div class="card-side card-back">
+        <p class="card-description ">{{ exercise.description }}</p>
+      </div>
+    </div>
+  </div>
+  
