--- a/src/app/exercise-page/list/list.component.html
+++ b/src/app/exercise-page/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="p-4 max-h-[350px] overflow-y-auto rounded-lg border border-gray-300 shadow-sm " style="width:30%">
+<div class="p-4 max-h-[350px] overflow-y-auto rounded-lg border border-gray-300 shadow-sm ">
     <div class="sticky top-0 bg-white z-20">
         <h2 class="text-lg font-bold mb-4">{{title}}</h2>
       </div>
