--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 @if (isLoading) {
-  <app-loader></app-loader>
+  <app-loader-page></app-loader-page>
 } @else {
   <div class="container mx-auto border-black ">
     <router-outlet></router-outlet>
