--- a/src/app/ingredient/ingredient.component.html
+++ b/src/app/ingredient/ingredient.component.html
@@ -4,7 +4,7 @@
   <div class="basis-1/2 flex-col items-center">
     @if (isLoading()){
       <div class="w-1/2 flex justify-center">
-        <img src="assets/spinner.gif" class="w-24 h-24">
+        <app-loading-spinner></app-loading-spinner>
       </div>
     }
     <app-ingredient-list
