fix: implement changes requested by yoyo + improve error handling

--- a/src/app/ingredient/ingredient-item/ingredient-item.component.html
+++ b/src/app/ingredient/ingredient-item/ingredient-item.component.html
@@ -1,5 +1,5 @@
-<li class="flex justify-between gap-x-6 py-5" (click)="onClick()">
-  <div class="flex min-w-0 gap-x-4">
+<li class="py-5 hover:bg-gray-100 cursor-pointer" (click)="onClick()">
+  <div class="flex min-w-0 gap-x-4 items-center">
     <img class="size-12 flex-none rounded-full bg-gray-50"
          alt="ingredient"
          src="{{ingredient.image}}"
