--- a/src/app/ingredient/ingredient-list/ingredient-list.component.css
+++ b/src/app/ingredient/ingredient-list/ingredient-list.component.css
@@ -1,19 +1,3 @@
-/* pagination.component.css */
-.pagination-controls {
-  display: flex;
-  gap: 5px;
-}
-
-.pagination-controls button {
-  padding: 5px 10px;
-}
-
-.pagination-controls button.active {
-  background-color: #007bff;
-  color: white;
-}
-
-.pagination-controls button:disabled {
-  background-color: #f0f0f0;
-  cursor: not-allowed;
+ul{
+  min-height: 21rem;
 }
