--- a/src/app/ingredient/ingredient.component.html
+++ b/src/app/ingredient/ingredient.component.html
@@ -1,49 +1,71 @@
 <h1 class="text-2xl font-medium">Ingredients</h1>
 <hr>
-<div class="flex flex-row pt-8" >
+<div class="flex flex-row pt-8">
   <div class="basis-1/2 flex-col items-center">
     <div class="relative">
+      <!-- Search Bar  !-->
       <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-        @if(isSearching()){
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="1.5em" height="1.5em"><radialGradient id="a12" cx=".66" fx=".66" cy=".3125" fy=".3125" gradientTransform="scale(1.5)"><stop offset="0" stop-color="#060001"/><stop offset=".3" stop-color="#060001" stop-opacity=".9"/><stop offset=".6" stop-color="#060001" stop-opacity=".6"/><stop offset=".8" stop-color="#060001" stop-opacity=".3"/><stop offset="1" stop-color="#060001" stop-opacity="0"/></radialGradient><circle transform-origin="center" fill="none" stroke="url(#a12)" stroke-width="11" stroke-linecap="round" stroke-dasharray="200 1000" stroke-dashoffset="0" cx="100" cy="100" r="70"><animateTransform type="rotate" attributeName="transform" calcMode="spline" dur="2" values="360;0" keyTimes="0;1" keySplines="0 0 1 1" repeatCount="indefinite"/></circle><circle transform-origin="center" fill="none" opacity=".2" stroke="#060001" stroke-width="11" stroke-linecap="round" cx="100" cy="100" r="70"/></svg>
-        }
-        @else{
-          <svg class="w-4 h-4 text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+        @if (isSearching()) {
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="1.5em" height="1.5em">
+            <radialGradient id="a12" cx=".66" fx=".66" cy=".3125" fy=".3125" gradientTransform="scale(1.5)">
+              <stop offset="0" stop-color="#060001"/>
+              <stop offset=".3" stop-color="#060001" stop-opacity=".9"/>
+              <stop offset=".6" stop-color="#060001" stop-opacity=".6"/>
+              <stop offset=".8" stop-color="#060001" stop-opacity=".3"/>
+              <stop offset="1" stop-color="#060001" stop-opacity="0"/>
+            </radialGradient>
+            <circle transform-origin="center" fill="none" stroke="url(#a12)" stroke-width="11" stroke-linecap="round"
+                    stroke-dasharray="200 1000" stroke-dashoffset="0" cx="100" cy="100" r="70">
+              <animateTransform type="rotate" attributeName="transform" calcMode="spline" dur="2" values="360;0"
+                                keyTimes="0;1" keySplines="0 0 1 1" repeatCount="indefinite"/>
+            </circle>
+            <circle transform-origin="center" fill="none" opacity=".2" stroke="#060001" stroke-width="11"
+                    stroke-linecap="round" cx="100" cy="100" r="70"/>
+          </svg>
+        } @else {
+          <svg class="w-4 h-4 text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
           </svg>
         }
       </div>
       <input
-        type="search"
+        [formControl]="form"
         class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-white focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400"
         placeholder="Search ingredient..."
-        [formControl]="form"
+        type="search"
       />
-
     </div>
-    <ul role="list" class="divide-y divide-gray-100">
-      @for (ingredient of searchIngredients$|async;track ingredient.id){
-        <li>
-          <app-ingredient-item [ingredient]="ingredient"></app-ingredient-item>
-        </li>
-      }
-      @empty {
+    <!-- Search Results  !-->
+    <ul class="divide-y divide-gray-100" role="list">
+      @for (ingredient of searchIngredients$|async; track ingredient.id) {
+        <!-- Error in search request  !-->
+        @if (ingredient.errorMessage) {
+          <div class="text-center text-neutral-600 mt-2">{{ ingredient.errorMessage }}</div>
+        } @else {
+          <li>
+            <app-ingredient-item [ingredient]="ingredient"></app-ingredient-item>
+          </li>
+        }
+      <!-- No errors but search found no match !-->
+      } @empty {
         <div class="mt-2.5">All Ingredients</div>
         <hr class="mt-1.5">
-
-      @if (isLoading()){
-        <div class="w-1/2 flex justify-center">
-          <app-loading-spinner></app-loading-spinner>
-        </div>
+        @if (isLoading()) {
+          <div class="w-1/2 flex justify-center">
+            <app-loading-spinner></app-loading-spinner>
+          </div>
+        }
+        <app-ingredient-list
+          [totalPages]="total()"
+          [ingredients]="ingredients$ | async"
+          (pageChange)="onPageChange($event)">
+        </app-ingredient-list>
       }
-      <app-ingredient-list
-        [totalPages]="total()"
-        [ingredients]="ingredients$ | async"
-        (pageChange)="onPageChange($event)">
-      </app-ingredient-list>
-    }
     </ul>
-</div>
+  </div>
+  <!-- Ingredient Details child  View  !-->
   <div class="basis-1/2">
     <router-outlet></router-outlet>
   </div>
