--- a/src/app/paginator/paginator.component.html
+++ b/src/app/paginator/paginator.component.html
@@ -1,7 +1,7 @@
   @if(selectedPage$|async;as currentPage){
-    <div class="flex">
+    <div class="flex mt-auto">
     <button
-      class="flex items-center justify-center hover:bg-secondary  px-4 h-10 ms-0  border border-e-0 border-300 rounded-s-lg disabled:cursor-not-allowed"
+      class="hover:bg-gray-100  px-4 h-10 ms-0  border border-e-0 border-300 rounded-s-lg disabled:cursor-not-allowed"
       (click)="onClick(currentPage-1)"
       [disabled]="currentPage==1"
     >
@@ -12,7 +12,7 @@
       @for (page of visiblePages;track page){
         <li
           [ngClass]="page == currentPage ? 'active' : ''"
-          class="flex items-center justify-center  hover:bg-secondary  px-4 h-10 ms-0 border border-e-0 border-300 text-center "
+          class="flex items-center justify-center  hover:bg-gray-100  px-4 h-10 ms-0 border border-e-0 border-300 text-center "
           (click)="onClick(page)"
         >
         {{page}}
@@ -20,7 +20,7 @@
       }
     </ul>
     <button
-      class="flex items-center justify-center hover:bg-secondary  px-4 h-10 ms-0  border  border-300 rounded-e-lg disabled:cursor-not-allowed"
+      class="hover:bg-gray-100  px-4 h-10 ms-0  border  border-300 rounded-e-lg disabled:cursor-not-allowed"
       (click)="onClick(currentPage+1)"
       [disabled]="currentPage==totalPages"
     >
