--- a/src/app/user-settings/user-settings.component.html
+++ b/src/app/user-settings/user-settings.component.html
@@ -1,37 +1,55 @@
 <body class="mx-auto p-8 bg-background-dark">
-<form >
+<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
   <div class="space-y-12">
     <div class="pb-12">
       <h2 class="text-2xl block font-medium text-text-light">Profile</h2>
       <div class="mt-8 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
         <div class="sm:col-span-4">
           <label for="username" class="block mb-2 text-sm font-medium text-text-light">Username</label>
-          <input type="text" formControlName="username" id="username" class="text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 bg-secondary-dark border-secondary-dark placeholder-placeholderDark " placeholder="Your username">
-
+          <input
+            type="text"
+            formControlName="username"
+            id="username"
+            class="text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 bg-secondary-dark border-secondary-dark placeholder-placeholderDark"
+          />
         </div>
         <div class="sm:col-span-4">
           <label for="email" class="block mb-2 text-sm font-medium text-text-light">Email</label>
-          <input type="email" formControlName="email" id="email" class="text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 bg-secondary-dark border-secondary-dark placeholder-placeholderDark" placeholder="name@company.com">
-
+          <input
+            type="email"
+            formControlName="email"
+            id="email"
+            class="text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 bg-secondary-dark border-secondary-dark placeholder-placeholderDark"
+          />
         </div>
         <div class="sm:col-span-4">
-          <label for="dateOfBirth" class="block mb-2 text-sm font-medium text-text-light">Date of birth</label>
-          <input type="date" formControlName="dateOfBirth" id="dateOfBirth" class="bg-secondary-light border border-secondary DEFAULT text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 dark:bg-secondary-dark dark:border-secondary-dark dark:placeholder-placeholderDark dark:text-text-light dark:focus:ring-primary-focus dark:focus:border-primary-focus">
+          <label for="birthdate" class="block mb-2 text-sm font-medium text-text-light">Date of birth</label>
+          <input
+            type="date"
+            formControlName="birthdate"
+            id="birthdate"
+            class="bg-secondary-light border border-secondary DEFAULT text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 dark:bg-secondary-dark dark:border-secondary-dark dark:placeholder-placeholderDark dark:text-text-light dark:focus:ring-primary-focus dark:focus:border-primary-focus"
+          />
         </div>
         <div class="sm:col-span-4">
           <label for="height" class="block mb-2 text-sm font-medium text-text-light">Height</label>
-          <input type="number" formControlName="height" id="height" class="bg-secondary-light border border-secondary DEFAULT text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 dark:bg-secondary-dark dark:border-secondary-dark dark:placeholder-placeholderDark dark:text-text-light dark:focus:ring-primary-focus dark:focus:border-primary-focus" placeholder="158">
-
+          <input
+            type="number"
+            formControlName="height"
+            id="height"
+            class="bg-secondary-light border border-secondary DEFAULT text-text-light rounded-lg focus:ring-primary-focus focus:border-primary-focus block w-full p-2.5 dark:bg-secondary-dark dark:border-secondary-dark dark:placeholder-placeholderDark dark:text-text-light dark:focus:ring-primary-focus dark:focus:border-primary-focus"
+          />
         </div>
-
       </div>
-
+      <button
+        type="submit"
+        (click)="onSubmit()"
+        class="mt-5 w-1/2 text-text-light bg-primary DEFAULT hover:bg-primary-hover focus:ring-4 focus:outline-none focus:ring-primary-focus font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary DEFAULT dark:hover:bg-primary-hover dark:focus:ring-primary-focus"
+      >
+        Save
+      </button>
     </div>
-    <button type="submit"  class="w-full text-text-light bg-primary DEFAULT hover:bg-primary-hover focus:ring-4 focus:outline-none focus:ring-primary-focus font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary DEFAULT dark:hover:bg-primary-hover dark:focus:ring-primary-focus">
-      Sign in
-    </button>
-  </div>
 
+  </div>
 </form>
 </body>
-
