--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,14 +10,14 @@
 
           <a [routerLink]="['']" class="block py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:p-0">{{ UI_TEXTS.ROUTINES }}</a>
 
-          <a [routerLink]="['']" class="block py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:p-0">{{UI_TEXTS.PREFERENCES}}</a>
+          <a [routerLink]="[APP_ROUTES.preferences]" class="block py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:p-0">{{UI_TEXTS.PREFERENCES}}</a>
 
         @if(authService.isLoggedIn())  {
           <a [routerLink]="['']" (click)="logout()" class="block py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:p-0">
             {{UI_TEXTS.LOGOUT}}
           </a>
         } @else {
-          <a [routerLink]="['']" class="block py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:p-0">
+          <a [routerLink]="[APP_ROUTES.login]" class="block py-2 px-3 rounded md:hover:bg-transparent md:border-0 md:p-0">
             {{UI_TEXTS.LOGIN}}
           </a>
         }
